--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -39,7 +39,9 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.ico"
+      "icon": "assets/icon.ico",
+      "sign": false,
+      "verifyUpdateCodeSignature": false
     },
     "mac": {
       "target": "dmg",
