修改策略配置查询，修改ele启动

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -35,7 +35,16 @@
     },
     "files": [
       "**/*",
-      "!node_modules/**/*"
+      "!node_modules/**/*",
+      "!dist/**/*",
+      "!*.md",
+      "!*.log"
+    ],
+    "extraFiles": [
+      {
+        "from": "config.json",
+        "to": "."
+      }
     ],
     "win": {
       "target": "nsis",
