--- a/vue-backend-admin/package.json
+++ b/vue-backend-admin/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.6.0",
-    "element-plus": "^2.4.4",
-    "@element-plus/icons-vue": "^2.3.1"
+    "echarts": "^6.0.0",
+    "element-plus": "^2.13.0",
+    "vue": "^3.3.4",
+    "vue-echarts": "^8.0.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.4.0"
   }
 }
-
